# Football-Manager

./: .gitattributes  CMakeLists.txt  README.md  echipe.json  league_config.json  main.cpp  tastatura.txt
Header/: Echipa.h  Jucator.h  Meci.h  PozitieJucator.h
HeadereSiCpp/: Echipa.cpp  Echipa.h  Exceptii.h  Jucator.cpp  Jucator.h  Liga.cpp  Liga.h  Meci.cpp  Meci.h  Meniu.cpp  Meniu.h  PozitieJucator.h  Tactica.cpp  Tactica.h  exceptii.cpp  main.cpp
